--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
-    "mongoose": "^8.15.1"
+    "moment": "^2.30.1",
+    "mongoose": "^8.16.1",
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
